begin writing a post

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
       <!-- Intro -->
       <div id="intro">
         <h1>
-          Bitácoras
+          Psicología y consumo
 		</h1>
-		<h2>Laura Salazar</h2>
+		<h2>Bitácora</h2>
         <p>
-          <i>Estudiante de Mercadeo</i> 
+          <i>Laura Salazar</i> 
         </p>
         <ul class="actions">
           <li>
@@ -42,7 +42,7 @@
 
       <!-- Header -->
       <header id="header">
-        <a href="index.html" class="logo">Bitácoras</a>
+        <a href="index.html" class="logo">Bitácora</a>
       </header>
 
       <!-- Nav -->
@@ -76,24 +76,25 @@
         <section class="posts">
           <article>
             <header>
-              <span class="date">April 24, 2017</span>
+              <span class="date">Unidad 4</span>
               <h2>
-                <a href="#"
-                  >Sed magna<br />
-                  ipsum faucibus</a
+                <a href="percepcion.html"
+                  >La variable percepción<br />
+                  </a
                 >
               </h2>
             </header>
-            <a href="#" class="image fit"
+            <a href="percepcion.html" class="image fit"
               ><img src="images/pic02.jpg" alt=""
             /></a>
             <p>
-              Donec eget ex magna. Interdum et malesuada fames ac ante ipsum
-              primis in faucibus. Pellentesque venenatis dolor imperdiet dolor
-              mattis sagittis magna etiam.
+              En esta entrada del blog partiré mencionando algunas de las estrategias utilizadas par fijar los precios de los productos y cómo los consumidores perciben o reaccionan ante los precios. Todo esto, como base para responder la pregunta:
+              <strong>
+              ¿De qué manera son utilizadas estás estrategias y qué hace que sean efectivas?</strong>
+
             </p>
             <ul class="actions special">
-              <li><a href="#" class="button">Full Story</a></li>
+              <li><a href="percepcion.html" class="button">Leer</a></li>
             </ul>
           </article>
           <article>
@@ -115,20 +116,12 @@
               mattis sagittis magna etiam.
             </p>
             <ul class="actions special">
-              <li><a href="#" class="button">Full Story</a></li>
+              <li><a href="#" class="button">Leer</a></li>
             </ul>
           </article>
         </section>
 
         <!-- Footer -->
-      <!-- Copyright -->
-      <div id="copyright">
-        <ul>
-          <li>&copy; Untitled</li>
-          <li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
-        </ul>
-      </div>
-    </div>
 
     <!-- Scripts -->
     <script src="assets/js/jquery.min.js"></script>
