--- a/index.html
+++ b/index.html
@@ -5,131 +5,115 @@
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html>
-  <head>
-    <title>Laura Salazar</title>
-    <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, user-scalable=no"
-    />
-    <link rel="stylesheet" href="assets/css/main.css" />
-    <noscript
-      ><link rel="stylesheet" href="assets/css/noscript.css"
-    /></noscript>
-  </head>
-  <body class="is-preload">
-    <!-- Wrapper -->
-    <div id="wrapper" class="fade-in">
-      <!-- Intro -->
-      <div id="intro">
-        <h1>
-          Psicología y consumo
-		</h1>
-		<h2>Bitácora</h2>
-        <p>
-          <i>Laura Salazar</i> 
-        </p>
-        <ul class="actions">
-          <li>
-            <a
-              href="#header"
-              class="button icon solid solo fa-arrow-down scrolly"
-              >Leer</a
-            >
-          </li>
-        </ul>
-      </div>
 
-      <!-- Header -->
-      <header id="header">
-        <a href="index.html" class="logo">Bitácora</a>
-      </header>
+<head>
+  <title>Laura Salazar</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+  <link rel="stylesheet" href="assets/css/main.css" />
+  <noscript>
+    <link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+</head>
 
-      <!-- Nav -->
-      <nav id="nav">
-        <ul class="links">
-          <li class="active"><a href="index.html">This is Massively</a></li>
-          <li><a href="generic.html">Generic Page</a></li>
-        </ul>
-        <ul class="icons">
-          <li>
-            <a href="#" class="icon brands fa-facebook-f"
-              ><span class="label">Facebook</span></a
-            >
-          </li>
-          <li>
-            <a href="#" class="icon brands fa-instagram"
-              ><span class="label">Instagram</span></a
-            >
-          </li>
-          <li>
-            <a href="#" class="icon brands fa-behance"
-              ><span class="label">Behance</span></a
-            >
-          </li>
-        </ul>
-      </nav>
+<body class="is-preload">
+  <!-- Wrapper -->
+  <div id="wrapper" class="fade-in">
+    <!-- Intro -->
+    <div id="intro">
+      <h1>
+        Psicología y consumo
+      </h1>
+      <h2>Bitácora</h2>
+      <p>
+        <i>Laura Salazar</i>
+      </p>
+      <ul class="actions">
+        <li>
+          <a href="#header" class="button icon solid solo fa-arrow-down scrolly">Leer</a>
+        </li>
+      </ul>
+    </div>
 
-      <!-- Main -->
-      <div id="main">
-        <!-- Posts -->
-        <section class="posts">
-          <article>
-            <header>
-              <span class="date">Unidad 4</span>
-              <h2>
-                <a href="percepcion.html"
-                  >La variable percepción<br />
-                  </a
-                >
-              </h2>
-            </header>
-            <a href="percepcion.html" class="image fit"
-              ><img src="images/pic02.jpg" alt=""
-            /></a>
-            <p>
-              En esta entrada del blog partiré mencionando algunas de las estrategias utilizadas par fijar los precios de los productos y cómo los consumidores perciben o reaccionan ante los precios. Todo esto, como base para responder la pregunta:
-              <strong>
+    <!-- Header -->
+    <header id="header">
+      <a href="index.html" class="logo">Bitácora</a>
+    </header>
+
+    <!-- Nav -->
+    <nav id="nav">
+      <ul class="links">
+        <li class="active"><a href="index.html">Página principal</a></li>
+        <li><a href="percepcion.html">La variable percepcion</a></li>
+        <li><a href="aprendizaje.html">Aprendizaje del consumidor</a></li>
+      </ul>
+      <ul class="icons">
+        <li>
+          <a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a>
+        </li>
+        <li>
+          <a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a>
+        </li>
+        <li>
+          <a href="#" class="icon brands fa-behance"><span class="label">Behance</span></a>
+        </li>
+      </ul>
+    </nav>
+
+    <!-- Main -->
+    <div id="main">
+      <!-- Posts -->
+      <section class="posts">
+        <article>
+          <header>
+            <span class="date">Unidad 4</span>
+            <h2>
+              <a href="percepcion.html">La variable percepción<br />
+              </a>
+            </h2>
+          </header>
+          <a href="percepcion.html" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+          <p>
+            En esta entrada del blog partiré mencionando algunas de las estrategias utilizadas par fijar los precios de
+            los productos y cómo los consumidores perciben o reaccionan ante los precios. Todo esto, como base para
+            responder la pregunta:
+            <strong>
               ¿De qué manera son utilizadas estás estrategias y qué hace que sean efectivas?</strong>
 
-            </p>
-            <ul class="actions special">
-              <li><a href="percepcion.html" class="button">Leer</a></li>
-            </ul>
-          </article>
-          <article>
-            <header>
-              <span class="date">April 22, 2017</span>
-              <h2>
-                <a href="#"
-                  >Primis eget<br />
-                  imperdiet lorem</a
-                >
-              </h2>
-            </header>
-            <a href="#" class="image fit"
-              ><img src="images/pic03.jpg" alt=""
-            /></a>
-            <p>
-              Donec eget ex magna. Interdum et malesuada fames ac ante ipsum
-              primis in faucibus. Pellentesque venenatis dolor imperdiet dolor
-              mattis sagittis magna etiam.
-            </p>
-            <ul class="actions special">
-              <li><a href="#" class="button">Leer</a></li>
-            </ul>
-          </article>
-        </section>
+          </p>
+          <ul class="actions special">
+            <li><a href="aprendizaje.html" class="button">Leer</a></li>
+          </ul>
+        </article>
+        <article>
+          <header>
+            <span class="date">Unidad 5</span>
+            <h2>
+              <a href="#">Aprendizaje<br />
+                del consumidor</a>
+            </h2>
+          </header>
+          <a href="aprendizaje.html" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+          <p>
+            Donec eget ex magna. Interdum et malesuada fames ac ante ipsum
+            primis in faucibus. Pellentesque venenatis dolor imperdiet dolor
+            mattis sagittis magna etiam.
+          </p>
+          <ul class="actions special">
+            <li><a href="aprendizaje.html" class="button">Leer</a></li>
+          </ul>
+        </article>
+      </section>
 
-        <!-- Footer -->
+      <!-- Footer -->
 
-    <!-- Scripts -->
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/jquery.scrollex.min.js"></script>
-    <script src="assets/js/jquery.scrolly.min.js"></script>
-    <script src="assets/js/browser.min.js"></script>
-    <script src="assets/js/breakpoints.min.js"></script>
-    <script src="assets/js/util.js"></script>
-    <script src="assets/js/main.js"></script>
-  </body>
+      <!-- Scripts -->
+      <script src="assets/js/jquery.min.js"></script>
+      <script src="assets/js/jquery.scrollex.min.js"></script>
+      <script src="assets/js/jquery.scrolly.min.js"></script>
+      <script src="assets/js/browser.min.js"></script>
+      <script src="assets/js/breakpoints.min.js"></script>
+      <script src="assets/js/util.js"></script>
+      <script src="assets/js/main.js"></script>
+</body>
+
 </html>
