changed img to gifs and added genially iframe

--- a/aprendizaje.html
+++ b/aprendizaje.html
@@ -93,7 +93,7 @@
 					con este, realizando un mayor esfuerzo cognoscitivo y prestando más atención para entender la
 					información presentada.
 				</p>
-				<p><img src="images/image3.png" style="float: right; margin:1em; width: 20vw; height: 15vw;">la teoría
+				<p><img src="images/image3.gif" style="float: right; margin:1em; width: 20vw; height: 15vw;">la teoría
 					del cerebro dividido que dice que el cerebro humano está dividido en dos hemisferios
 					distintos que se especializan en el procesamiento de diferentes tipos de cogniciones. El lado
 					izquierdo del cerebro es racional, activo y realista; y el derecho, emocional, metafórico, impulsivo
@@ -103,7 +103,7 @@
 					comerciales en televisión, es el lado derecho del cerebro el que procesa la información y requiere
 					un involucramiento bajo.
 				</p>
-				<p><img src="images/image4.png" style="float: left; margin:1em; width: 21vw; height: 17vw;">
+				<p><img src="images/image4.gif" style="float: left; margin:1em; width: 21vw; height: 17vw;">
 					La información procesada en el lado derecho del cerebro suele estar vinculada con el
 					condicionamiento clásico, pues es a través de la repetición de los anuncios que se busca generar esa
 					respuesta o aprendizaje para que el consumidor decida comprar la marca publicitada. De esta manera,
@@ -130,7 +130,15 @@
 				<p>A continuación, encontrarás algunos ejemplos con casos relacionados al tema estudiado y algunas
 					preguntas para afianzar el entendimiento de este.
 				</p>
-				<p>Inserte Genially* :3</p>
+				<hr>
+				<div style="width: 100%;">
+					<div style="position: relative; padding-bottom: 56.25%; padding-top: 0; height: 0;"><iframe
+							frameborder="0" width="1200" height="675"
+							style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;"
+							src="https://view.genial.ly/5f8592872b825c0d0b49851c" type="text/html"
+							allowscriptaccess="always" allowfullscreen="true" scrolling="yes"
+							allownetworking="all"></iframe> </div>
+				</div>
 				<hr>
 				<h3>Referencias</h3>
 				<p><i>Joseph, L. (2015). Comportamiento del consumidor. (11a. ed.) Pearson Educación. Tomado de: <a
