--- a/percepcion.html
+++ b/percepcion.html
@@ -61,7 +61,7 @@
 					y que procesamos de manera racional. Lo cierto es que estos precios son fijados estratégicamente ya
 					que nuestra psicología humana no nos permite ver el mundo tal y como es, sino que hacemos
 					interpretaciones y percepciones subjetivas de |la realidad.</p><br>
-				<p><img src="images/image6.png" style="float: left; margin:1em; width: 30vw; height: 21vw;">El
+				<p>
 					De acuerdo con lo anterior, estudios de Neuromarketing muestran que el precio tiene una influencia
 					psicológica en el consumidor. Su uso adecuado ayuda a persuadirlo en la <strong>toma de
 						decisión</strong> sobre la
@@ -72,13 +72,16 @@
 				<p>Veamos algunas de estas herramientas: </p>
 				<br>
 				<h3>Precio impar</h3>
-				<p>El precio impar es uno de los recursos más utilizados y efectivos. Estos precios como su propio
+				<p><img src="images/image6.png" style="float: right; margin:1em; width: 15vw; height: 10vw;">El precio
+					impar es uno de los recursos más utilizados y efectivos. Estos precios como su propio
 					nombre indica terminan en cifras impares, generalmente 5 o 9. Por ejemplo, un producto se venderá
 					mejor en $3.99 que a $4.00 aunque la diferencia entre ambos valores sea insignificante. El porqué de
 					esto se debe a que, inconscientemente, nuestra mente leerá el valor de izquierda a derecha y el
 					primer número en captar será el que, para nosotros, tenga mayor importancia.
 				</p>
-				<p>Otro recurso que acompaña a esta herramienta es utilizar un tamaño de fuente inferior para los
+				<p><img src="images/image0.png" style="float: right; margin:1em; width: 15vw; height: 10vw;">Otro
+					recurso
+					que acompaña a esta herramienta es utilizar un tamaño de fuente inferior para los
 					centavos, es decir, para el 99. De esta manera, la primera cifra ($3) tendrá mayor peso en la
 					percepción del cliente.
 				</p>
