--- a/aprendizaje.html
+++ b/aprendizaje.html
@@ -67,7 +67,7 @@
 					motivacional que dirige los procesos afectivos, cognitivos y comportamentales de los consumidores
 					cuando toman decisiones.
 				</p>
-				<p><img src="images/image1.png" style="float: left; margin:1em; width: 20vw; height: 15vw;">El
+				<p><img src="images/image1.jpg" style="float: left; margin:1em; width: 20vw; height: 16vw;">El
 					Haz de cuenta que tienes muchas ganas de realizar un viaje al exterior. Como tu motivación por
 					hacerlo es alta, vas a buscar los medios que sean necesario para llevar a cabo este deseo, como
 					buscar las aerolíneas que te ofrezcan el mejor precio, hoteles cerca a los lugares que quieres
@@ -77,7 +77,7 @@
 				<p>Este caso representa una compra de alto involucramiento las cuales son muy importantes para el
 					consumidor por el riesgo percibido y por esto, requiere un complejo procesamiento de la información.
 				</p>
-				<p><img src="images/image7.png" style="float: right; margin:1em; width: 20vw; height: 15vw;">Las compras
+				<p><img src="images/image7.jpg" style="float: right; margin:1em; width: 20vw; height: 15vw;">Las compras
 					de bajo involucramiento no son tan importantes, tienen poca relevancia, generan una baja
 					percepción de riesgo, y requieren un procesamiento de información muy limitado. Por ejemplo, ir al
 					supermercado a comprar bananos. Posiblemente, para hacer esta compra, no te haga falta realizar un
