--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
             </h2>
           </header>
           <a href="aprendizaje.html" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-          <p>
-            Donec eget ex magna. Interdum et malesuada fames ac ante ipsum
-            primis in faucibus. Pellentesque venenatis dolor imperdiet dolor
-            mattis sagittis magna etiam.
+          <p>En esta entrada del blog, partiendo del tema del aprendizaje, estudiaremos el involucramiento, la
+            motivación y el procesamiento de la información del consumidor para darle respuesta a la pregunta:
+            <strong>¿Qué influye en el alto o bajo grado de involucramiento de los consumidores con los anuncios de los
+              productos?</strong>
           </p>
           <ul class="actions special">
             <li><a href="aprendizaje.html" class="button">Leer</a></li>
