added two sections, changed images, removed icons

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-  <title>Laura Salazar</title>
+  <title>Psicología y Consumo</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <link rel="stylesheet" href="assets/css/main.css" />
@@ -43,26 +43,21 @@
     <nav id="nav">
       <ul class="links">
         <li class="active"><a href="index.html">Página principal</a></li>
-        <li><a href="percepcion.html">La variable percepcion</a></li>
+        <li><a href="percepcion.html">Variable percepcion</a></li>
         <li><a href="aprendizaje.html">Aprendizaje del consumidor</a></li>
+        <li><a href="neuro.html">Neuromarketing</a></li>
+        <li><a href="neuro.html">Análisis de actitudes</a></li>
       </ul>
-      <ul class="icons">
-        <li>
-          <a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a>
-        </li>
-        <li>
-          <a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a>
-        </li>
-        <li>
-          <a href="#" class="icon brands fa-behance"><span class="label">Behance</span></a>
-        </li>
-      </ul>
+
     </nav>
 
     <!-- Main -->
     <div id="main">
       <!-- Posts -->
       <section class="posts">
+
+        <!-- ----------------------- POST 1 -------------------------------- -->
+
         <article>
           <header>
             <span class="date">Unidad 4</span>
@@ -71,7 +66,7 @@
               </a>
             </h2>
           </header>
-          <a href="percepcion.html" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+          <a href="percepcion.html" class="image fit"><img src="images/percepción.jpg" alt="" /></a>
           <p>
             En esta entrada del blog partiré mencionando algunas de las estrategias utilizadas par fijar los precios de
             los productos y cómo los consumidores perciben o reaccionan ante los precios. Todo esto, como base para
@@ -84,15 +79,18 @@
             <li><a href="aprendizaje.html" class="button">Leer</a></li>
           </ul>
         </article>
+
+        <!-- ----------------------- POST 2 -------------------------------- -->
+
         <article>
           <header>
             <span class="date">Unidad 5</span>
             <h2>
-              <a href="#">Aprendizaje<br />
+              <a href="aprendizaje.html">Aprendizaje<br />
                 del consumidor</a>
             </h2>
           </header>
-          <a href="aprendizaje.html" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+          <a href="aprendizaje.html" class="image fit"><img src="images/aprendizaje.jpg" alt="" /></a>
           <p>En esta entrada del blog, partiendo del tema del aprendizaje, estudiaremos el involucramiento, la
             motivación y el procesamiento de la información del consumidor para darle respuesta a la pregunta:
             <strong>¿Qué influye en el alto o bajo grado de involucramiento de los consumidores con los anuncios de los
@@ -102,8 +100,49 @@
             <li><a href="aprendizaje.html" class="button">Leer</a></li>
           </ul>
         </article>
-      </section>
 
+        <!-- ----------------------- POST 3 -------------------------------- -->
+
+        <article>
+          <header>
+            <span class="date">Unidad 6</span>
+            <h2>
+              <a href="neuro.html">Uso del neuromarketing<br />
+              </a>
+            </h2>
+          </header>
+          <a href="neuro.html" class="image fit"><img src="images/Neuroscience-Marketing-1.jpg" alt="" /></a>
+          <p>
+            En esta entrada del blog veremos las aplicaciones del neuromarketing para comprender las decisiones de los
+            consumidores y de esta manera, justificar la siguiente pregunta:
+            <strong>¿Cómo actúa el componente afectivo en las decisiones de compras de los consumidores?</strong>
+          </p>
+          <ul class="actions special">
+            <li><a href="neuro.html" class="button">Leer</a></li>
+          </ul>
+        </article>
+
+        <!-- ----------------------- POST 4 -------------------------------- -->
+
+        <article>
+          <header>
+            <span class="date">Unidad 7</span>
+            <h2>
+              <a href="actitudes.html">Análisis de las actitudes,<br />
+                formación y cambio</a>
+            </h2>
+          </header>
+          <a href="actitudes.html" class="image fit"><img src="images/modificación.jpg" alt="" /></a>
+          <p>En esta entrada veremos algunas estrategias utilizadas para modificar el comportamiento de los consumidores
+            para responder la siguiente pregunta:
+            <strong>¿Cuál es el papel de la imagen y publicidad de una marca al tratar de modificar el comportamiento de
+              los consumidores?</strong>
+          </p>
+          <ul class="actions special">
+            <li><a href="actitudes.html" class="button">Leer</a></li>
+          </ul>
+        </article>
+      </section>
       <!-- Footer -->
 
       <!-- Scripts -->
