--- a/aprendizaje.html
+++ b/aprendizaje.html
@@ -7,7 +7,7 @@
 <html>
 
 <head>
-	<title>Generic Page - Massively by HTML5 UP</title>
+	<title>Psicología y Consumo</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<link rel="stylesheet" href="assets/css/main.css" />
@@ -31,11 +31,9 @@
 				<li><a href="index.html">Página Principal</a></li>
 				<li class=""><a href="percepcion.html">La variable percepción</a></li>
 				<li class="active"><a href="aprendizaje.html">Aprendizaje del consumidor</a></li>
-			</ul>
-			<ul class="icons">
-				<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-				<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-				<li><a href="#" class="icon brands fa-behance"><span class="label">GitHub</span></a></li>
+				<li class=""><a href="neuro.html">Uso del neuromarketing</a></li>
+				<li class=""><a href="actitudes.html">Análisis de actitudes</a></li>
+
 			</ul>
 		</nav>
 
