cleanup and fixed typos

--- a/actitudes.html
+++ b/actitudes.html
@@ -22,7 +22,7 @@
 
 		<!-- Header -->
 		<header id="header">
-			<a href="index.html" class="logo">Análisis de las actitudes, formación y cambio</a>
+			<a href="index.html" class="logo">Psicología y consumo</a>
 		</header>
 
 		<!-- Nav -->
