--- a/neuro.html
+++ b/neuro.html
@@ -22,7 +22,7 @@
 
 		<!-- Header -->
 		<header id="header">
-			<a href="index.html" class="logo">Uso del neuromarketing</a>
+			<a href="index.html" class="logo">Psicología y consumo</a>
 		</header>
 
 		<!-- Nav -->
