added favicon and fixed typos

--- a/aprendizaje.html
+++ b/aprendizaje.html
@@ -91,7 +91,7 @@
 					con este, realizando un mayor esfuerzo cognoscitivo y prestando más atención para entender la
 					información presentada.
 				</p>
-				<p><img src="images/image3.gif" style="float: right; margin:1em; width: 20vw; height: 15vw;">la teoría
+				<p><img src="images/image3.gif" style="float: right; margin:1em; width: 20vw; height: 15vw;">La teoría
 					del cerebro dividido que dice que el cerebro humano está dividido en dos hemisferios
 					distintos que se especializan en el procesamiento de diferentes tipos de cogniciones. El lado
 					izquierdo del cerebro es racional, activo y realista; y el derecho, emocional, metafórico, impulsivo
