added images and fixed typos

--- a/aprendizaje.html
+++ b/aprendizaje.html
@@ -65,7 +65,7 @@
 					motivacional que dirige los procesos afectivos, cognitivos y comportamentales de los consumidores
 					cuando toman decisiones.
 				</p>
-				<p><img src="images/image1.jpg" style="float: left; margin:1em; width: 20vw; height: 16vw;">El
+				<p><img src="images/image1.jpg" style="float: left; margin:1em; width: 20vw; height: 16vw;">
 					Haz de cuenta que tienes muchas ganas de realizar un viaje al exterior. Como tu motivación por
 					hacerlo es alta, vas a buscar los medios que sean necesario para llevar a cabo este deseo, como
 					buscar las aerolíneas que te ofrezcan el mejor precio, hoteles cerca a los lugares que quieres
@@ -105,7 +105,8 @@
 					La información procesada en el lado derecho del cerebro suele estar vinculada con el
 					condicionamiento clásico, pues es a través de la repetición de los anuncios que se busca generar esa
 					respuesta o aprendizaje para que el consumidor decida comprar la marca publicitada. De esta manera,
-					las empresas tratan de usar elementos gráficos de gran impacto televisión y exhibidos en las tiendas
+					las empresas tratan de usar elementos gráficos de gran impacto en televisión y exhibidos en las
+					tiendas
 					para generar familiaridad con la marca e inducir el comportamiento de compra.
 				</p>
 				<hr>
