--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <li><a href="percepcion.html">Variable percepcion</a></li>
         <li><a href="aprendizaje.html">Aprendizaje del consumidor</a></li>
         <li><a href="neuro.html">Neuromarketing</a></li>
-        <li><a href="neuro.html">Análisis de actitudes</a></li>
+        <li><a href="actitudes.html">Análisis de actitudes</a></li>
       </ul>
 
     </nav>
@@ -75,7 +75,7 @@
 
           </p>
           <ul class="actions special">
-            <li><a href="aprendizaje.html" class="button">Leer</a></li>
+            <li><a href="percepcion.html" class="button">Leer</a></li>
           </ul>
         </article>
 
