--- a/neuro.html
+++ b/neuro.html
@@ -53,7 +53,8 @@
 				</p>
 				<p><strong>¿Cómo actúa el componente afectivo en las decisiones de compras de los consumidores?</strong>
 				</p>
-				<br>
+				<img src="/images/brain.gif" alt=""
+					style=" display: flex; margin: 2em auto; width: 18vw; height: 13vw;">
 				<p>El neuromarketing estudia los procesos cerebrales que explican la conducta y la toma de decisiones de
 					las personas. Tiene aplicación o aporta en cada uno de los campos del mercadeo, no solamente cuando
 					se investiga un mercado, sino también cuando se investiga el desarrollo de un producto. Se usa
@@ -65,7 +66,8 @@
 					involucramiento con lo racional es bajo.</p>
 				<hr>
 				<h3>Decisiones de compra emocionales</h3>
-				<p>Los esfuerzos del Marketing en un principio se han centrado en influir en las decisiones de compra a
+				<p><img src="images/giphy.gif" style="float: right; margin:1em; width: 18vw; height: 13vw;">Los
+					esfuerzos del Marketing en un principio se han centrado en influir en las decisiones de compra a
 					través de la persuasión, basándose en el comportamiento racional (características, ventajas,
 					comparaciones, precio, etc), pues según esto, los consumidores generalmente buscan maximizar las
 					utilidades y ahorrar. Sin embargo, los seres humanos están fuertemente influenciados por sus
