--- a/percepcion.html
+++ b/percepcion.html
@@ -58,7 +58,7 @@
 				<p>Como consumidores podríamos pensar que los precios asignados a los productos son elementos objetivos
 					y que procesamos de manera racional. Lo cierto es que estos precios son fijados estratégicamente ya
 					que nuestra psicología humana no nos permite ver el mundo tal y como es, sino que hacemos
-					interpretaciones y percepciones subjetivas de |la realidad.</p><br>
+					interpretaciones y percepciones subjetivas de la realidad.</p><br>
 				<p>
 					De acuerdo con lo anterior, estudios de Neuromarketing muestran que el precio tiene una influencia
 					psicológica en el consumidor. Su uso adecuado ayuda a persuadirlo en la <strong>toma de
@@ -114,7 +114,8 @@
 				</p>
 				<hr>
 				<h3>Mensualidad o precio a cuotas</h3>
-				<p>Esta estrategia también es utilizada en productos que son altamente costosos. Consiste en presentar
+				<p><img src="images/netflix.png" alt="" style="float: left; margin:1em; width: 20vw; height: 15vw;">Esta
+					estrategia también es utilizada en productos que son altamente costosos. Consiste en presentar
 					al consumidor el precio dividido en la cantidad de tiempo en que pagaría el producto o servicio. Por
 					ejemplo, el precio final de un automóvil es de $21,720. Si el cliente decidiera pagarlo en un plazo
 					de 48 meses, cada mes pagaría $452,5. Este último precio es mucho más atractivo para él, quien en el
