--- a/percepcion.html
+++ b/percepcion.html
@@ -148,6 +148,13 @@
 					le otorga el producto, y el precio al que está expuesto.
 				</p>
 				<hr>
+				<h3>Ejemplos de estas técnicas aplicadas en los precios de un supermercado</h3>
+				<div style="margin: 3em auto; display: flex;
+				text-align: center; width: 720px; height: 480px;">
+					<iframe src="https://drive.google.com/file/d/1EA1ghLvEE39Z9Qd4TwglGU8bqq5xzCj0/preview" width="720"
+						height="480"></iframe>
+				</div>
+				<hr>
 				<h3>Referencias</h3>
 				<p><i>Javier Ortego. (2016). El precio y su percepción psicológica en el consumidor. Tomado de <a
 							href="https://bit.ly/3iP39iG"> https://bit.ly/3iP39iG</a></i></p>
