added two sections

--- a/aprendizaje.html
+++ b/aprendizaje.html
@@ -13,6 +13,10 @@
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	<link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/images/favicon/favicon-16x16.png">
+	<link rel="manifest" href="/images/favicon/site.webmanifest">
 </head>
 
 <body class="is-preload">
@@ -28,12 +32,13 @@
 		<!-- Nav -->
 		<nav id="nav">
 			<ul class="links">
-				<li><a href="index.html">Página Principal</a></li>
-				<li class=""><a href="percepcion.html">La variable percepción</a></li>
-				<li class="active"><a href="aprendizaje.html">Aprendizaje del consumidor</a></li>
-				<li class=""><a href="neuro.html">Uso del neuromarketing</a></li>
-				<li class=""><a href="actitudes.html">Análisis de actitudes</a></li>
-
+				<li><a href=" index.html"><i class="fas fa-home"></i></a></li>
+				<li><a href="percepcion.html">Percepcion</a></li>
+				<li class="active"><a href="aprendizaje.html">Aprendizaje</a></li>
+				<li><a href="neuro.html">Neuromarketing</a></li>
+				<li><a href="actitudes.html">Análisis de actitudes</a></li>
+				<li><a href="personalidad.html">Personalidad</a></li>
+				<li><a href="decisiones.html">Decisiones</a></li>
 			</ul>
 		</nav>
 
