--- a/index.html
+++ b/index.html
@@ -41,11 +41,13 @@
     <!-- Nav -->
     <nav id="nav">
       <ul class="links">
-        <li class="active"><a href="index.html">Página principal</a></li>
-        <li><a href="percepcion.html">Variable percepcion</a></li>
-        <li><a href="aprendizaje.html">Aprendizaje del consumidor</a></li>
+        <li class="active"><a href=" index.html"><i class="fas fa-home"></i></a></li>
+        <li><a href="percepcion.html">Percepcion</a></li>
+        <li><a href="aprendizaje.html">Aprendizaje</a></li>
         <li><a href="neuro.html">Neuromarketing</a></li>
         <li><a href="actitudes.html">Análisis de actitudes</a></li>
+        <li><a href="personalidad.html">Personalidad</a></li>
+        <li><a href="decisiones.html">Decisiones</a></li>
       </ul>
 
     </nav>
@@ -141,8 +143,51 @@
             <li><a href="actitudes.html" class="button">Leer</a></li>
           </ul>
         </article>
+
+        <!-- ----------------------- POST 5 -------------------------------- -->
+
+
+        <article>
+          <header>
+            <span class="date">Unidad 8</span>
+            <h2>
+              <a href="personalidad.html">Teoría de la motivación<br />
+                y la personalidad en el consumo</a>
+            </h2>
+          </header>
+          <a href="personalidad.html" class="image fit"><img src="images/modificación.jpg" alt="" /></a>
+          <p>En esta entrada estudiaremos las personalidades de las marcas y su influencia en el comportamiento de los
+            consumidores para responder a la pregunta:
+            <strong>¿cómo ciertos rasgos de la personalidad de una marca pueden afectar la motivación del consumidor
+              para la decisión de compra?</strong>
+          </p>
+          <ul class="actions special">
+            <li><a href="personalidad.html" class="button">Leer</a></li>
+          </ul>
+        </article>
+
+        <!-- ----------------------- POST 6 -------------------------------- -->
+
+
+        <article>
+          <header>
+            <span class="date">Unidad 7</span>
+            <h2>
+              <a href="actitudes.html">Análisis de las actitudes,<br />
+                formación y cambio</a>
+            </h2>
+          </header>
+          <a href="actitudes.html" class="image fit"><img src="images/modificación.jpg" alt="" /></a>
+          <p>En esta entrada veremos algunas estrategias utilizadas para modificar el comportamiento de los consumidores
+            para responder la siguiente pregunta:
+            <strong>¿Cuál es el papel de la imagen y publicidad de una marca al tratar de modificar el comportamiento de
+              los consumidores?</strong>
+          </p>
+          <ul class="actions special">
+            <li><a href="actitudes.html" class="button">Leer</a></li>
+          </ul>
+        </article>
       </section>
-      <!-- Footer -->
 
       <!-- Scripts -->
       <script src="assets/js/jquery.min.js"></script>
