--- a/actitudes.html
+++ b/actitudes.html
@@ -28,12 +28,13 @@
 		<!-- Nav -->
 		<nav id="nav">
 			<ul class="links">
-				<li><a href="index.html">Página Principal</a></li>
-				<li class=""><a href="percepcion.html">La variable percepción</a></li>
-				<li class=""><a href="aprendizaje.html">Aprendizaje del consumidor</a></li>
-				<li class=""><a href="neuro.html">Uso del neuromarketing</a></li>
-				<li class="active "><a href="actitudes.html">Análisis de actitudes</a></li>
-
+				<li><a href=" index.html"><i class="fas fa-home"></i></a></li>
+				<li><a href="percepcion.html">Percepcion</a></li>
+				<li><a href="aprendizaje.html">Aprendizaje</a></li>
+				<li><a href="neuro.html">Neuromarketing</a></li>
+				<li class="active"><a href="actitudes.html">Análisis de actitudes</a></li>
+				<li><a href="personalidad.html">Personalidad</a></li>
+				<li><a href="decisiones.html">Decisiones</a></li>
 			</ul>
 		</nav>
 
