--- a/percepcion.html
+++ b/percepcion.html
@@ -13,6 +13,10 @@
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	<link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/images/favicon/favicon-16x16.png">
+	<link rel="manifest" href="/images/favicon/site.webmanifest">
 </head>
 
 <body class="is-preload">
@@ -28,12 +32,13 @@
 		<!-- Nav -->
 		<nav id="nav">
 			<ul class="links">
-				<li><a href="index.html">Página Principal</a></li>
-				<li class="active"><a href="percepcion.html">La variable percepción</a></li>
-				<li class=""><a href="aprendizaje.html">Aprendizaje del consumidor</a></li>
-				<li class=""><a href="neuro.html">Uso del neuromarketing</a></li>
-				<li class=""><a href="actitudes.html">Análisis de actitudes</a></li>
-
+				<li><a href=" index.html"><i class="fas fa-home"></i></a></li>
+				<li class="active"><a href="percepcion.html">Percepcion</a></li>
+				<li><a href="aprendizaje.html">Aprendizaje</a></li>
+				<li><a href="neuro.html">Neuromarketing</a></li>
+				<li><a href="actitudes.html">Análisis de actitudes</a></li>
+				<li><a href="personalidad.html">Personalidad</a></li>
+				<li><a href="decisiones.html">Decisiones</a></li>
 			</ul>
 		</nav>
 
@@ -58,14 +63,16 @@
 				<p>Como consumidores podríamos pensar que los precios asignados a los productos son elementos objetivos
 					y que procesamos de manera racional. Lo cierto es que estos precios son fijados estratégicamente ya
 					que nuestra psicología humana no nos permite ver el mundo tal y como es, sino que hacemos
-					interpretaciones y percepciones subjetivas de la realidad.</p><br>
+					interpretaciones y percepciones subjetivas de la realidad.
+				</p><br>
 				<p>
 					De acuerdo con lo anterior, estudios de Neuromarketing muestran que el precio tiene una influencia
 					psicológica en el consumidor. Su uso adecuado ayuda a persuadirlo en la <strong>toma de
 						decisión</strong> sobre la
 					compra del producto. Siendo conscientes de esto, las empresas han desarrollado herramientas para
 					fijar los precios de sus productos, teniendo como clave el cerebro del consumidor y la manera en la
-					que codifica los números.</p>
+					que codifica los números.
+				</p>
 				<br>
 				<p>Veamos algunas de estas herramientas: </p>
 				<br>
